PR: SCM-108 Submitted by: Wim Deblauwe
Replace jdk 1.5 call with 1.4


git-svn-id: https://svn.eu.apache.org/repos/asf/maven/scm/trunk@357054 13f79535-47bb-0310-9956-ffa450edef68